fix: remove text-align: justify

--- a/scss/components/_components.intro.scss
+++ b/scss/components/_components.intro.scss
@@ -8,7 +8,6 @@
         }
     }
     p {
-        text-align: justify;
         @include font(16px, Doris, normal, 0);
     }
 }
